Koch on the inside and outside

--- a/defs.html
+++ b/defs.html
@@ -45,8 +45,13 @@
         </g>
     </defs>
     <use xlink:href="#koch6" />
+    <use xlink:href="#koch6" transform="translate(900) rotate(180,0,300)" />
+
     <use xlink:href="#koch6" transform="rotate(60,0,300) translate(900) rotate(180,0,300)" />
+    <use xlink:href="#koch6" transform="rotate(60,0,300)" />
+
     <use xlink:href="#koch6" transform="rotate(-60,900,300) translate(900) rotate(180,0,300)" />
+    <use xlink:href="#koch6" transform="rotate(-60,900,300)"/>
 </svg>
 </body>
 </html>
