Failed attempt to redo

--- a/p6.html
+++ b/p6.html
@@ -9,9 +9,9 @@
             <polygon points="450,250 350,423.2051 150,423.2051 50,250 150,76.7949 350,76.7949" />
         </g>
         <g id="triangle">
-            <polygon points="450,250 250,250 350,76.7949" fill="rgb(0,110,125)" />
-            <polygon points="250,250 285,250 293.3013,225 267.5,219.6891" fill="rgb(126,101,101)" />
-            <polygon points="450,250 350,76.7949 396.7221,218.8132 313.9482,221.5284 379.4427,155.9544 270.0739,227.7057" fill="rgb(61,17,123)" />
+            <circle cx="350" cy="195" r="53" fill="rgb(212,175,140)" />
+            <circle cx="280" cy="230" r="15" fill="rgb(141,206,228)" />
+            <circle cx="350" cy="120" r="21" fill="rgb(66,60,111)" />
         </g>
     </svg>
 </body>
